compiler/testData/diagnostics/tests/delegatedProperty/wrongCountOfParametersInSet.kt
class A {
  var a: Int by <!DELEGATE_SPECIAL_FUNCTION_NONE_APPLICABLE!>Delegate()<!>
}

var aTopLevel: Int by <!DELEGATE_SPECIAL_FUNCTION_NONE_APPLICABLE!>Delegate()<!>

class Delegate {
  fun get(t: Any?, p: String): Int {
    t.equals(p) // to avoid UNUSED_PARAMETER warning
    return 1
  }

  fun set(t: Any?, p: String, a: Int, c: Int) {
    t.equals(p) // to avoid UNUSED_PARAMETER warning
    c.equals(a)
  }
}